(Instagram): display Instagram images in modal

--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
@@ -35,7 +35,7 @@
 {
     Id = "change-picture-modal",
     Title = "Change profile picture",
-    Size = "modal-lg",
+    Size = ModalSize.Large,
     Body =
     @<div>
         <form method="post" action="@OdkRoutes.Account.PictureUpload(Model.Chapter)" enctype="multipart/form-data">
