--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -33,7 +33,7 @@
 {
     Id = "change-picture-modal",
     Title = "Change profile picture",
-    Size = "modal-lg",
+    Size = ModalSize.Large,
     Body =
     @<div>
         <form method="post" action="/account/picture/change">
