--- a/ODK.Web.Razor/Views/Shared/Topics/_TopicPicker.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Topics/_TopicPicker.cshtml
@@ -122,7 +122,7 @@
 {
     Id = "topics-modal",
     Title = "Topics",
-    Size = "modal-xl",
+    Size = ModalSize.ExtraLarge,
     Body = 
         @<div>
             @await Html.PartialAsync("Components/_ExpandedListBox", new ExpandedListBoxViewModel
