--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="social-media-image-tile">
-    <a data-bs-toggle="modal" data-bs-target="#@modalId">
+    <a href="#" data-bs-toggle="modal" data-bs-target="#@modalId">
         <div class="social-media-image-container">
             <img src="/instagram/images/@defaultImage.Id/thumbnail?size=250" alt="@defaultImage.Alt" />
             @if (Model.Images.Count > 1)
