Fix short Instagram caption layout

--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
@@ -43,10 +43,10 @@
             })          
         </div>,    
     Footer = 
-        @<div>
+        @<div class="w-100">
             @if (!string.IsNullOrEmpty(Model.Caption))
             {
-                <p class="small">
+                <p class="small text-center">
                     @Model.Caption
                 </p>
             }
