Instagram post layout

--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
@@ -29,7 +29,7 @@
     Class = "carousel-modal",
     Size = ModalSize.Large,
     Body = 
-        @<div>
+        @<div class="w-100">
             @await Html.PartialAsync("Components/_Carousel", new CarouselViewModel
             {
                 Id = $"instagram-post-carousel-{Model.ExternalId}",
