--- a/ODK.Web.Razor/wwwroot/css/_social-media.scss
+++ b/ODK.Web.Razor/wwwroot/css/_social-media.scss
@@ -53,3 +53,9 @@
         }
     }
 }
+
+.social-media-post-caption-container {
+    width: 100%;
+    max-height: 25dvh;
+    overflow-y: scroll;
+}
