--- a/ODK.Web.Razor/Views/Shared/Components/_Modal.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Modal.cshtml
@@ -9,19 +9,25 @@
         ModalSize.ExtraLarge => "modal-xl",
         _ => null
     };
+
+    var hasTitle = !string.IsNullOrEmpty(Model.Title);
 }
 
 <div class="modal @Model.Class" tabindex="-1" id="@Model.Id">
     <div class="modal-dialog modal-dialog-scrollable @size">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">@Model.Title</h5>
+            <div class="modal-header @(!hasTitle ? "no-title" : null)">
+                @if (hasTitle)
+                {
+                    <h5 class="modal-title">@Model.Title</h5>
+                }
+                
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                @Model.Body.Invoke(null)
+            <div class="modal-body">                
+                @Model.Body.Invoke(null)                
             </div>
-            @if (Model.Footer != null)
+            @if (Model.Footer != null && !Model.HideFooter)
             {
                 <div class="modal-footer">
                     @Model.Footer.Invoke(null)
