--- a/ODK.Web.Razor/wwwroot/css/_carousel.scss
+++ b/ODK.Web.Razor/wwwroot/css/_carousel.scss
@@ -1,12 +1,29 @@
-﻿.carousel,
+﻿.carousel-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.carousel-fill {
+    flex: 1 1 auto;
+    min-height: 0; /* CRITICAL for flex overflow */
+}
+
+.carousel,
 .carousel-inner,
 .carousel-item {
     height: 100%;
 }
+
 /* Constrain images */
 .carousel-image {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     margin: auto;
+}
+
+.carousel-footer {
+    margin-top: 1rem;
 }
