--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
@@ -18,6 +18,7 @@
         Name = Model.Subscription.Name,
         OwnerSubscription = Model.OwnerSubscription,
         Recurring = Model.Subscription.Recurring,
+        SitePaymentSettings = Model.SitePaymentSettings,
         SupportsRecurringPayments = Model.SupportsRecurringPayments,
         Title = Model.Subscription.Title
     })
