--- a/ODK.Web.Razor/Pages/Account/Subscription.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Subscription.cshtml
@@ -1,16 +1,23 @@
 ﻿@page "/account/subscription"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
+@using ODK.Core.Exceptions
+@using ODK.Core.Platforms
 @using ODK.Services.Subscriptions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Payments
-@model ODK.Web.Razor.Pages.Account.SubscriptionModel
+@model SubscriptionModel
 @inject ISiteSubscriptionService SiteSubscriptionService
 @{
     Layout = "_AccountLayout";
     Model.Title = "Subscription";
+
+    if (Model.Platform == PlatformType.DrunkenKnitwits)
+    {
+        throw new OdkNotFoundException();
+    }
 
     var viewModel = await SiteSubscriptionService.GetSiteSubscriptionsViewModel(
         Model.ServiceRequest, Model.CurrentMemberIdOrDefault);
@@ -31,29 +38,3 @@
             </div>
     })
 })
-
-@section scripts
-{
-    @{
-        var added = new HashSet<Guid>();
-    }
-
-    @foreach (var dto in viewModel.Subscriptions)
-    {
-        var paymentSettings = dto.SitePaymentSettings.First(x => x.Id == dto.Subscription.SitePaymentSettingId);
-        if (added.Contains(paymentSettings.Id))
-        {
-            continue;
-        }
-
-        added.Add(paymentSettings.Id);
-
-        @await Html.PartialAsync("Payments/_PaymentScripts", new PaymentScriptsViewModel
-        {
-            ApiPublicKey = paymentSettings.ApiPublicKey ?? "",
-            CurrencyCode = "",
-            IsSubscription = true,
-            Provider = paymentSettings.Provider
-       })
-    }
-}
