--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
@@ -92,15 +92,8 @@ else if (Model.ChapterSubscriptions.Count > 0)
 {
     <h3>@title</h3>
 
-    @foreach (var chapterSubscriptionDto in Model.ChapterSubscriptions)
+    @foreach (var chapterSubscription in Model.ChapterSubscriptions)
     {
-        var chapterSubscription = chapterSubscriptionDto.ChapterSubscription;
-
-        var modalId = $"payment-modal-{chapterSubscription.Id}";
-        IPaymentSettings? paymentSettings = chapterSubscriptionDto.SitePaymentSettings != null
-            ? chapterSubscriptionDto.SitePaymentSettings
-            : Model.ChapterPaymentSettings;
-
         <div class="mb-3">
             <div class="card">
                 <div class="card-body">
@@ -120,42 +113,17 @@ else if (Model.ChapterSubscriptions.Count > 0)
 
                     <div>
                         <div class="button-container mt-3">
-                            @if (paymentSettings?.Provider == PaymentProviderType.Stripe)
-                            {
+                            @{
                                 var checkoutUrl = OdkRoutes.Groups
                                     .SubscriptionCheckout(Model.Platform, Model.Chapter, chapterSubscription);
+                            }                            
 
-                                <a class="btn btn-primary" href="@checkoutUrl">
-                                    Buy
-                                </a>
-                            }
-                            else
-                            {
-                                <button class="btn btn-primary"
-                                        data-bs-toggle="modal" data-bs-target="#@modalId">
-                                    Buy
-                                </button>
-                            }
+                            <a class="btn btn-primary" href="@checkoutUrl">
+                                Buy
+                            </a>
 
                             <span>@chapterSubscription.Currency.ToAmountString(chapterSubscription.Amount)</span>
-                        </div>
-                        @await Html.PartialAsync("Payments/_PaymentModal", new PaymentModalViewModel
-                       {
-                           Action = $"/Chapters/{Model.Chapter.Id}/Account/Subscription/Purchase",
-                           PaymentSettings = paymentSettings,
-                           FormContentFunc =
-                                @<input type="hidden" name="subscriptionId" value="@chapterSubscription.Id" />,
-                           Id = modalId,
-                           PaymentForm = new PaymentFormViewModel
-                           {
-                               Amount = (decimal)chapterSubscription.Amount,
-                               Currency = chapterSubscription.Currency,
-                               Description = chapterSubscription.Title,
-                               Id = chapterSubscription.Id.ToString()
-                           },
-                           Title = title
-                       })
-
+                        </div>                        
                     </div>
                 </div>
             </div>
