--- a/ODK.Web.Razor/Views/Shared/Payments/_PaymentScripts.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Payments/_PaymentScripts.cshtml
@@ -2,26 +2,11 @@
 @using ODK.Web.Razor.Models.Payments
 @model PaymentScriptsViewModel
 
-@if (Model.Provider == PaymentProviderType.PayPal)
+@foreach (var provider in Model.Providers.Distinct())
 {
-    var currency = Model.CurrencyCode;
-    var clientId = Model.ApiPublicKey;
-
-    var scriptUrl = $"https://www.paypal.com/sdk/js?client-id={clientId}&components=buttons";
-    if (Model.IsSubscription)
+    @if (provider == PaymentProviderType.Stripe)
     {
-        scriptUrl += $"&vault=true&intent=subscription";        
+        <script src="https://js.stripe.com/v3"></script>
+        <script src="~/js/odk.stripe.js" asp-append-version="true"></script>
     }
-    else
-    {
-        scriptUrl += $"&currency={currency}";
-    }
-
-    <script src="@scriptUrl"></script>
-    <script src="~/js/odk.paypal.js" asp-append-version="true"></script>
-}
-else if (Model.Provider == PaymentProviderType.Stripe)
-{
-    <script src="https://js.stripe.com/v3"></script>
-    <script src="~/js/odk.stripe.js" asp-append-version="true"></script>
 }
