--- a/ODK.Web.Razor/Pages/Pricing.cshtml
+++ b/ODK.Web.Razor/Pages/Pricing.cshtml
@@ -10,7 +10,7 @@
     Model.Path = "/pricing";
 
     var siteSubscriptions = await SiteSubscriptionService
-        .GetSiteSubscriptionsViewModel(Model.ServiceRequest, Model.CurrentMemberIdOrDefault);
+        .GetSiteSubscriptionsViewModel(Model.ServiceRequest, Model.CurrentMemberIdOrDefault, chapterId: null);
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
