--- a/ODK.Web.Razor/Views/Shared/Events/_EventStatus.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventStatus.cshtml
@@ -26,7 +26,7 @@
     </div>
 }
 
-@if (Model.SpacesLeft != null && Model.WaitingListLength == 0)
+@if (Model.SpacesLeft != null && Model.WaitlistLength == 0)
 {
     <div>
         Spaces left: @Model.SpacesLeft / @Model.Event.AttendeeLimit
